crates/core/src/snapshots/marzano_core__test__basic_md.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $match
        scopedName: 1_0_$match
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 1
              column: 13
            startByte: 0
            endByte: 12
    sourceFile: foo.md
    content: "[text](link)"
    byteRanges: ~
    ranges:
      - start:
          line: 1
          column: 1
        end:
          line: 1
          column: 13
        startByte: 0
        endByte: 12
  rewritten:
    messages: []
    variables: []
    sourceFile: foo.md
    content: "[changed](link)"
    byteRanges:
      - start: 0
        end: 15
    ranges: []
  reason: ~
- __typename: DoneFile
  relativeFilePath: foo.md
