crates/core/src/snapshots/marzano_core__test__clone_activites.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Match
  messages: []
  variables:
    - name: $new_files
      scopedName: 0_0_$new_files
      ranges: []
    - name: $program
      scopedName: 0_1_$program
      ranges: []
    - name: $filename
      scopedName: 0_2_$filename
      ranges: []
    - name: $absolute_filename
      scopedName: 0_3_$absolute_filename
      ranges: []
    - name: $names
      scopedName: 1_0_$names
      ranges: []
    - name: $names
      scopedName: 2_0_$names
      ranges: []
    - name: $name
      scopedName: 2_1_$name
      ranges: []
    - name: $body
      scopedName: 2_2_$body
      ranges: []
    - name: $activities
      scopedName: 2_3_$activities
      ranges: []
    - name: $names
      scopedName: 3_0_$names
      ranges: []
    - name: $activity
      scopedName: 3_1_$activity
      ranges: []
    - name: $names
      scopedName: 4_0_$names
      ranges: []
    - name: $name
      scopedName: 4_1_$name
      ranges: []
    - name: $body
      scopedName: 4_2_$body
      ranges: []
    - name: $old
      scopedName: 4_3_$old
      ranges: []
    - name: $new_names
      scopedName: 4_4_$new_names
      ranges: []
  sourceFile: ~/dev/rewriter/packages/sdk/src/stdlib/index.ts
  content: "import { findConfigs } from './configs';\n// Remember: ./packages/timekeeper/src/__generated__/stdlib.ts\nexport const stdlib = {\n  show,\n  apply,\n  sh,\n};\n\nexport type StdLibFunctions = typeof stdlib;"
  ranges: []
  reason: ~
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $names
        scopedName: 1_0_$names
        ranges: []
      - name: $names
        scopedName: 2_0_$names
        ranges: []
      - name: $name
        scopedName: 2_1_$name
        ranges: []
      - name: $body
        scopedName: 2_2_$body
        ranges: []
      - name: $activities
        scopedName: 2_3_$activities
        ranges: []
      - name: $names
        scopedName: 3_0_$names
        ranges: []
      - name: $activity
        scopedName: 3_1_$activity
        ranges: []
      - name: $names
        scopedName: 4_0_$names
        ranges: []
      - name: $name
        scopedName: 4_1_$name
        ranges: []
      - name: $body
        scopedName: 4_2_$body
        ranges: []
      - name: $old
        scopedName: 4_3_$old
        ranges: []
      - name: $new_names
        scopedName: 4_4_$new_names
        ranges: []
    sourceFile: ~/dev/rewriter/packages/timekeeper/src/__generated__/stdlib.ts
    content: "export const stdlib = [\n  'foo',\n  'bar',\n  'baz',\n  'qux'\n] as const;\n\nexport type StdLibNamedFunctions = typeof stdlib;"
    byteRanges: ~
    ranges: []
  rewritten:
    messages: []
    variables: []
    sourceFile: ~/dev/rewriter/packages/timekeeper/src/__generated__/stdlib.ts
    content: "export const stdlib = [\n  'show', 'apply', 'sh'\n] as const;\n\nexport type StdLibNamedFunctions = typeof stdlib;"
    byteRanges:
      - start: 26
        end: 47
    ranges: []
  reason: ~
- __typename: DoneFile
  relativeFilePath: ~/dev/rewriter/packages/sdk/src/stdlib/index.ts
- __typename: DoneFile
  relativeFilePath: ~/dev/rewriter/packages/timekeeper/src/__generated__/stdlib.ts
