crates/core/src/snapshots/marzano_core__test__file_rename.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $name
        scopedName: 1_0_$name
        ranges: []
      - name: $body
        scopedName: 1_1_$body
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 2
              column: 1
            startByte: 0
            endByte: 24
      - name: $new_name
        scopedName: 1_2_$new_name
        ranges:
          - start:
              line: 1
              column: 11
            end:
              line: 1
              column: 23
            startByte: 10
            endByte: 22
    sourceFile: test-file.tsx
    ranges: []
    debug: "{\n  \"SORT\": \"program\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 2,\n      \"column\": 1\n    }\n  },\n  \"statements\": [\n    {\n      \"SORT\": \"expression_statement\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 24\n        }\n      },\n      \"expression\": {\n        \"SORT\": \"call_expression\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 24\n          }\n        },\n        \"arguments\": [\n          {\n            \"SORT\": \"identifier\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 11\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 23\n              }\n            },\n            \"TEXT\": \"the_new_name\"\n          }\n        ],\n        \"function\": {\n          \"SORT\": \"identifier\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 1\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 10\n            }\n          },\n          \"TEXT\": \"rename_to\"\n        },\n        \"CHILDREN\": [\n          {\n            \"SORT\": \"(\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 10\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 11\n              }\n            },\n            \"TEXT\": \"(\"\n          },\n          {\n            \"SORT\": \")\",\n            \"RANGE\": {\n              \"start\": {\n                \"line\": 1,\n                \"column\": 23\n              },\n              \"end\": {\n                \"line\": 1,\n                \"column\": 24\n              }\n            },\n            \"TEXT\": \")\"\n          }\n        ]\n      }\n    }\n  ]\n}"
  rewritten:
    messages: []
    variables: []
    sourceFile: the_new_name
    content: "we_renamed_to(the_new_name)\n"
    byteRanges:
      - start: 0
        end: 27
  ansiSummary: ""
  reason: ~
- __typename: DoneFile
  relativeFilePath: test-file.tsx
