crates/core/src/snapshots/marzano_core__test__filename.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges: []
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
      - name: $b
        scopedName: 1_0_$b
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 2
              column: 1
            startByte: 0
            endByte: 10
    sourceFile: test-file.tsx
    ranges: []
    debug: "{\n  \"SORT\": \"program\",\n  \"RANGE\": {\n    \"start\": {\n      \"line\": 1,\n      \"column\": 1\n    },\n    \"end\": {\n      \"line\": 2,\n      \"column\": 1\n    }\n  },\n  \"statements\": [\n    {\n      \"SORT\": \"expression_statement\",\n      \"RANGE\": {\n        \"start\": {\n          \"line\": 1,\n          \"column\": 1\n        },\n        \"end\": {\n          \"line\": 1,\n          \"column\": 10\n        }\n      },\n      \"expression\": {\n        \"SORT\": \"identifier\",\n        \"RANGE\": {\n          \"start\": {\n            \"line\": 1,\n            \"column\": 1\n          },\n          \"end\": {\n            \"line\": 1,\n            \"column\": 9\n          }\n        },\n        \"TEXT\": \"whatever\"\n      },\n      \"CHILDREN\": [\n        {\n          \"SORT\": \";\",\n          \"RANGE\": {\n            \"start\": {\n              \"line\": 1,\n              \"column\": 9\n            },\n            \"end\": {\n              \"line\": 1,\n              \"column\": 10\n            }\n          },\n          \"TEXT\": \";\"\n        }\n      ]\n    }\n  ]\n}"
    reason: ~
  rewritten:
    messages: []
    variables: []
    sourceFile: the_new_name
    content: "test-file.tsx;\n"
    byteRanges:
      - start: 0
        end: 13
- __typename: DoneFile
  relativeFilePath: test-file.tsx
