crates/core/src/snapshots/marzano_core__test__program.snap
---
source: crates/core/src/test.rs
expression: results
---
- __typename: Rewrite
  original:
    messages: []
    variables:
      - name: $new_files
        scopedName: 0_0_$new_files
        ranges: []
      - name: $program
        scopedName: 0_1_$program
        ranges:
          - start:
              line: 1
              column: 1
            end:
              line: 4
              column: 1
            startByte: 0
            endByte: 34
      - name: $filename
        scopedName: 0_2_$filename
        ranges: []
      - name: $absolute_filename
        scopedName: 0_3_$absolute_filename
        ranges: []
    sourceFile: test-file.tsx
    ranges: []
  rewritten:
    messages: []
    variables: []
    sourceFile: test-file.tsx
    content: "other_stuff;\nreplace_with_this;\nand_more;\n"
    byteRanges:
      - start: 13
        end: 30
  reason: ~
- __typename: DoneFile
  relativeFilePath: test-file.tsx
